--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,11 +3,15 @@
     android:orientation="vertical"
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
+    android:background="@color/lineColor"
     android:layout_width="60dp"
     android:layout_height="60dp">
     <ImageView
+        android:layout_marginTop="0.5dp"
+        android:layout_marginLeft="0.5dp"
+        android:background="@color/white"
         android:id="@+id/image_image"
         android:scaleType="centerCrop"
-        android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_width="59dp"
+        android:layout_height="59dp" />
 </RelativeLayout>
