--- a/app/src/main/res/layout/rv_btn.xml
+++ b/app/src/main/res/layout/rv_btn.xml
@@ -1,57 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:background="@color/mainBackgroundColor"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-    <Button
-        android:id="@+id/home_release_btn"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="3dp"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@drawable/shape_release_task_btn"
-        android:textColor="@color/white"
-        android:text="发布"/>
-    <Button
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="3dp"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@drawable/shape_release_task_btn"
-        android:textColor="@color/white"
-        android:text="二手市场"/>
-    <Button
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="3dp"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@drawable/shape_release_task_btn"
-        android:textColor="@color/white"
-        android:text="兼职"/>
-    <Button
-        android:id="@+id/home_accept_btn"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@drawable/shape_accept_task_btn"
-        android:textColor="@color/white"
-        android:text="接受任务"/>
+    android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/home_release_btn"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:background="@drawable/shape_release_task_btn"
+            android:text="发布任务"/>
+        <Button
+            android:id="@+id/home_task_list"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:background="@drawable/shape_accept_task_btn"
+            android:text="任务列表"/>
 </LinearLayout>
