--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,13 @@
 <resources>
     <color name="colorPrimary">#1B9DFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorAccent">#333333</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="fontColor">#757575</color>
     <color name="hintColor">#999999</color>
     <color name="trans">#00000000</color>    <!-- 透明色 -->
+    <color name="shadow">#33000000</color>    <!-- 透明色 -->
     <color name="lineColor">#D6D6D6</color> <!-- 分割线颜色 -->
     <color name="mainBackgroundColor">#F8F8F8</color> <!-- 背景颜色 -->
     <color name="inputBackground">#FAFAFA</color>
