--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -26,7 +26,7 @@
                     android:src="@drawable/background"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/user_head"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="100dp"
