--- a/app/src/main/res/layout/activity_user_edit.xml
+++ b/app/src/main/res/layout/activity_user_edit.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_user_edit"
+    android:orientation="vertical"
+    android:background="@color/mainBackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.edu.schooltask.activity.UserEditActivity">
     <include layout="@layout/toolbar"/>
-</RelativeLayout>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_head"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="头像"
+        app:type="head">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_bg"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="背景"
+        app:type="image">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_name"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="昵称"
+        app:type="text">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_sign"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="简介"
+        app:type="text">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_school"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="学校"
+        app:type="text">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_sex"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="性别"
+        app:type="text">
+    </com.edu.schooltask.view.UserEditItem>
+    <com.edu.schooltask.view.UserEditItem
+        android:id="@+id/ue_birth"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:name="生日"
+        app:type="text">
+    </com.edu.schooltask.view.UserEditItem>
+</LinearLayout>
