--- a/app/src/main/res/layout/dialog_input_multiline.xml
+++ b/app/src/main/res/layout/dialog_input_multiline.xml
@@ -1,40 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/yes_no_title"
+        android:id="@+id/dim_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
         android:textSize="16sp"
-        android:text="我是标题"/>
+        android:text="请输入简介"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:background="@color/lineColor"/>
-    <TextView
-        android:id="@+id/yes_no_content"
-        android:paddingTop="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:gravity="center"
+    <com.edu.schooltask.view.Content
+        android:id="@+id/dim_content"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="我是内容"/>
-    <TextView
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:id="@+id/yes_no_hint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="12sp"
-        android:text="提示"
-        android:textColor="@color/hintColor"/>
+        android:layout_height="100dp"
+        app:contentHint="个人简介"
+        app:maxLength="40">
+    </com.edu.schooltask.view.Content>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
@@ -44,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
         <TextView
-            android:id="@+id/yes_no_no"
+            android:id="@+id/dim_no"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:gravity="center"
@@ -56,7 +44,7 @@
             android:layout_height="match_parent"
             android:background="@color/lineColor"/>
         <TextView
-            android:id="@+id/yes_no_yes"
+            android:id="@+id/dim_yes"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:gravity="center"
