--- a/app/src/main/res/layout/fragment_user_page.xml
+++ b/app/src/main/res/layout/fragment_user_page.xml
@@ -5,20 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/uf_bg"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@drawable/background"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_height="200dp">
         <ImageView
-            android:layout_marginTop="10dp"
-            android:id="@+id/up_user_head"
+            android:id="@+id/up_bg"
+            android:scaleType="fitXY"
+            android:src="@drawable/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:id="@+id/up_head"
+            android:src="@drawable/head"
             android:layout_width="70dp"
             android:layout_height="70dp"/>
         <TextView
-            android:id="@+id/up_user_name"
+            android:id="@+id/up_name"
+            android:layout_below="@id/up_head"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:layout_centerInParent="true"
@@ -27,7 +32,9 @@
             android:textColor="@color/white"
             android:text="登录/注册"/>
         <TextView
-            android:id="@+id/up_user_home"
+            android:id="@+id/up_home"
+            android:layout_below="@id/up_name"
+            android:layout_centerInParent="true"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +43,7 @@
             android:text="我的主页"
             android:textColor="@color/white"
             android:visibility="invisible"/>
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/up_rv"
