--- a/app/src/main/res/layout/item_order_state.xml
+++ b/app/src/main/res/layout/item_order_state.xml
@@ -29,6 +29,7 @@
             android:id="@+id/os_state_text"
             android:layout_weight="4"
             android:textSize="12sp"
+            android:textIsSelectable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1111年11月11日 12:12:12"/>
