--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="2"
+        android:textIsSelectable="true"
         android:text="内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/task_rv"
