--- a/app/src/main/res/layout/activity_wait_accept_order.xml
+++ b/app/src/main/res/layout/activity_wait_accept_order.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
     android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.edu.schooltask.activity.WaitAcceptOrderActivity">
-    <include layout="@layout/toolbar"/>
     <RelativeLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/wao_srl"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <include layout="@layout/toolbar"/>
+        <com.baoyz.widget.PullRefreshLayout
+            android:id="@+id/wao_prl"
+            android:layout_below="@id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:refreshColor="@color/colorPrimary"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <com.edu.schooltask.view.CommentRecyclerView
+                android:id="@+id/wao_crv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.edu.schooltask.view.CommentRecyclerView>
+        </com.baoyz.widget.PullRefreshLayout>
+        <com.edu.schooltask.view.CommentReplyView
+            android:id="@+id/wao_comment_reply_view"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/wao_rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
-        </android.support.v4.widget.SwipeRefreshLayout>
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/wao_child_srl"
-            android:visibility="invisible"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/wao_child_rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
-        </android.support.v4.widget.SwipeRefreshLayout>
-
+        </com.edu.schooltask.view.CommentReplyView>
     </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/lineColor"/>
+
+
+
     <RelativeLayout
         android:background="@color/white"
-        android:layout_gravity="bottom"
-        android:gravity="center_vertical|right"
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <com.edu.schooltask.view.CommentInputBoard
