--- a/app/src/main/res/layout/dialog_recharge.xml
+++ b/app/src/main/res/layout/dialog_recharge.xml
@@ -7,7 +7,7 @@
     <com.edu.schooltask.view.InputText
         android:id="@+id/recharge_money"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         app:text="充值金额">
     </com.edu.schooltask.view.InputText>
     <LinearLayout
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
-        android:layout_height="50dp">
+        android:layout_height="40dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -24,7 +24,7 @@
             android:text="充值方式"/>
         <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/recharge_type"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <Button
