--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,35 +7,31 @@
     <com.edu.schooltask.view.InputText
         android:id="@+id/login_id"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         app:text="手机号"
         app:hint="请输入手机号">
     </com.edu.schooltask.view.InputText>
-    <RelativeLayout
+    <com.edu.schooltask.view.InputText
+        android:id="@+id/login_pwd"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-        <com.edu.schooltask.view.InputText
-            android:id="@+id/login_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:inputType="password"
-            app:hint="请输入密码"
-            app:text="密码">
-        </com.edu.schooltask.view.InputText>
-        <TextView
-            android:layout_gravity="right"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:paddingTop="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="12sp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="忘记密码"/>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        app:inputType="password"
+        app:hint="请输入密码"
+        app:text="密  码">
+    </com.edu.schooltask.view.InputText>
+    <TextView
+        android:layout_gravity="right"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="5dp"
+        android:textSize="12sp"
+        android:layout_marginRight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="忘记密码"/>
 
 
     <Button
