--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,13 +3,14 @@
     android:orientation="vertical"
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
+    android:background="@color/imageBorderColor"
     android:layout_width="60dp"
     android:layout_height="60dp">
     <ImageView
-        android:layout_marginTop="0.5dp"
-        android:layout_marginLeft="0.5dp"
+        android:layout_margin="0.5dp"
         android:id="@+id/image_image"
         android:scaleType="centerCrop"
         android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:background="@color/inputBackground"/>
 </RelativeLayout>
