--- a/app/src/main/res/layout/item_task_comment.xml
+++ b/app/src/main/res/layout/item_task_comment.xml
@@ -10,16 +10,14 @@
         <include layout="@layout/user_item_small"/>
         <TextView
             android:id="@+id/tc_child_count"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/colorPrimary"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:text="1条回复"/>
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"/>
     </RelativeLayout>
 
     <TextView
