--- a/app/src/main/res/layout/view_input_text.xml
+++ b/app/src/main/res/layout/view_input_text.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:orientation="horizontal"
+    android:layout_height="35dp">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:id="@+id/it_bg"
         android:orientation="horizontal"
-        android:layout_weight="1"
-        android:layout_height="50dp">
+        android:background="@drawable/bg_input_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/it_name"
             android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="文本"/>
         <EditText
             android:id="@+id/it_input"
+            android:paddingLeft="10dp"
             android:textSize="14sp"
+            android:layout_margin="0.5dp"
             android:layout_width="match_parent"
             android:textColor="@color/fontColor"
             android:layout_height="match_parent"
-            android:background="@color/trans"/>
+            android:background="@drawable/bg_input_text_text"/>
     </LinearLayout>
-    <View
-        android:id="@+id/it_underline"
-        android:background="@color/lineColor"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_height="0.5dp"/>
+
 </LinearLayout>
