--- a/app/src/main/res/layout/view_task_count.xml
+++ b/app/src/main/res/layout/view_task_count.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:paddingTop="10dp"
+    android:layout_marginTop="10dp"
     android:paddingLeft="15dp"
     android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tc_comment_count"
-        android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/hintColor"
         android:textSize="12sp"
-        android:text="评论(0)"/>
+        android:text="评论 0"/>
     <TextView
         android:layout_alignParentRight="true"
         android:id="@+id/tc_look_count"
-        android:gravity="center_vertical"
         android:textColor="@color/hintColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:layout_marginRight="15dp"
-        android:text="浏览"/>
-    <ImageView
-        android:layout_alignTop="@id/tc_look_count"
-        android:layout_alignBottom="@id/tc_look_count"
-        android:layout_toLeftOf="@id/tc_look_count"
-        android:src="@drawable/ic_action_look_num"
-        android:layout_width="20dp"
-        android:layout_height="20dp" />
+        android:text="浏览 0"/>
 </RelativeLayout>
