//完美的解决了首页滑动下拉冲突 //完美的修改了订单信息页面

--- a/app/src/main/res/layout/activity_wait_accept_order.xml
+++ b/app/src/main/res/layout/activity_wait_accept_order.xml
@@ -22,6 +22,8 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <com.edu.schooltask.view.CommentRecyclerView
                 android:id="@+id/wao_crv"
+                android:fadingEdge="none"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </com.edu.schooltask.view.CommentRecyclerView>
@@ -29,6 +31,8 @@
         <com.edu.schooltask.view.CommentReplyView
             android:id="@+id/wao_comment_reply_view"
             android:visibility="gone"
+            android:fadingEdge="none"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </com.edu.schooltask.view.CommentReplyView>
